Alignment fixes in chat window..

--- a/HexiCloud/public_html/css/hc-navigationbar.css
+++ b/HexiCloud/public_html/css/hc-navigationbar.css
@@ -12,6 +12,7 @@ and open the template in the editor.
 .chat-window {
     position: fixed;
     width: 250px;
+    min-height: 100vh;
     color: #F5EBDC;
     background-color: #4C5B5E;
     box-sizing: border-box;
@@ -36,7 +37,7 @@ and open the template in the editor.
     background-size: 40px 40px;
     background-repeat: no-repeat;
     /* 4px is the 10th part of backgrond-size (40px) */
-    background-position-x: calc(50% - 4px);
+    background-position: 36px 0px;
 }
 
 .chat-ico {
@@ -45,7 +46,7 @@ and open the template in the editor.
     background-size: 60px 60px;
     background-repeat: no-repeat;
     /* 6px is the 10th part of backgrond-size (60px) */
-    background-position-x: calc(50% - 6px);
+    background-position: 80px 0px;
 }
 
 .chat-container {
